[metadata]
name = cronscribe
version = 0.1.0
description = Converts human-readable schedule descriptions into valid cron expressions with validation and previews.
author = cronscribe developers
license = MIT

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    cronscribe = cronscribe.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short -q

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
